# fcre

./: compile.py  setup.cfg
fcre/: camera.py  experiment.py  pool.py  pztcontroller.py  shutter.py
fcre/_extern/: AMC.py
fcre/ui/: CameraUI.py  PZTControllerUI.py  ShutterUI.py  __init__.py
manuals/AMCPZTController/: supplement_AMC100.md
