[metadata]
name = fcre
version = 1.0
license = MIT License
author = Xingyu Bao
author_email = baoxingyubob@outlook.com
description = equipment controller for fiber cavity platform in 8001 CAS, USTC
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://github.com/bobdadada/fcre

[options]
zip_safe = False
packages = find:
install_requires = 
    numpy
    opencv_python
    pyserial
    bidict
    qtdptools

[options.extras_require]
ui3.7 = qtpy; pyqtgraph==0.10.0; pillow; PyQt5
ui3.8 = qtpy; pyqtgraph>0.10.0; pillow; PyQt5
